added some styling and practice code in comments

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
        
        </section>
 
-       <ul id="dataList">
-    </ul> 
+       <div id="dataList">
+    </div> 
 
         <script src="apps.js"></script>
     </body>
